--- a/modules/ROOT/examples/hugo/front-matter-reuse.html
+++ b/modules/ROOT/examples/hugo/front-matter-reuse.html
@@ -4,7 +4,7 @@ title: "Release Notes"
 
 ## Feature XYZ
 
-{{ with .Site.GetPage "feature-xyz/_index.md" }}
+{{ with .Site.GetPage "/feature-xyz/_index.md" }}
     {{ with .Params.description }}
         <p class="feature-description">{{ . }}</p>
     {{ end }}
