format code samples with prettier

--- a/modules/ROOT/examples/documentation-dashboards-overview.html
+++ b/modules/ROOT/examples/documentation-dashboards-overview.html
@@ -1,51 +1,74 @@
 <body>
-    <h1>RTFM-Industries Documentation Dashboards</h1>
-    <p>
-        RTFM-Industries Documentation Dashboards provides technical writers with visualized data to track documentation requests. Each dashboard tracks the following metrics:
-    </p>
-    <ul>
-        <li>Reuests for new feature documentation</li>
-        <li>Request for documentation bug fixes</li>
-        <li>Percentage of documentation completed per project</li>
-    </ul>
-    <figure>
-        <img src=" ../images/best-practice-documentation-dashboards.png " alt="image of RTFM-Industries Documentation Dashboards " />
-        <figcaption>RTFM-Industries Documentation Dashboards</figcaption>
-    </figure>
-    <p>
-        Within each dashboard, a tech writer can learn more about each data point by clicking on it. Requests are color-coded to signify priority:</p>
-    <ul>
-        <li>
-          <span class="red-txt">Red</span> = you forgot to write the documentation and everyone knows it
-        </li>
-        <li>
-          <span class="yellow-txt">Yellow</span> = you've successfully pushed the deadline back by pretending to be sick</li>
-        <li>
-          <span class="green-txt">Green</span> = you've got PLENTY of time to write the docs (as long as nothing goes wrong)
-        </li>
-    </ul>
-        <p>To adjust these priorities, see the <a href="adjust-doc-priority.htm">Adjusting Documentation Priorities</a> section.</p>
-    <h2>Export Documentation Dashboards</h2>
-    <p>RTFM-Industries Dashboard tiles can be exported into the following file type: (Excel, PDF, RTF, CSV).</p>
-        <p>
-        <span class="note">
-        <span class="bold">Note:</span>
-            All RTFM-Industries Documentation Dashboards are fully HTML5 and do not require Microsoft Silverlight.
-        </span>
-        </p>
-        <h2>Prerequisites &amp; licensing</h2>
-        <ul>
-            <li>SaaS client</li>
-            <li>
-                <a href="request-RTFM-Industries-dashboards.htm">
-                Request the RTFM-Industries Documentation Dashboard feature
-                </a>
-            </li>
-            <li>User assigned the Tech Writer <a href="../sys-admin/roles/tech-writer-power-user">power user role</a></li>
-        </ul>
-        <h2>Navigation Path</h2>
-        <p>Home &gt; Dashboards</p>
-        <h2>Next steps</h2>
-        <p><a href="create-doc-dashboard.htm">Create a new Documentation Dashboard</a>
-        </p>
+  <h1>RTFM-Industries Documentation Dashboards</h1>
+  <p>
+    RTFM-Industries Documentation Dashboards provides technical writers with
+    visualized data to track documentation requests. Each dashboard tracks the
+    following metrics:
+  </p>
+  <ul>
+    <li>Reuests for new feature documentation</li>
+    <li>Request for documentation bug fixes</li>
+    <li>Percentage of documentation completed per project</li>
+  </ul>
+  <figure>
+    <img
+      src=" ../images/best-practice-documentation-dashboards.png "
+      alt="image of RTFM-Industries Documentation Dashboards "
+    />
+    <figcaption>RTFM-Industries Documentation Dashboards</figcaption>
+  </figure>
+  <p>
+    Within each dashboard, a tech writer can learn more about each data point by
+    clicking on it. Requests are color-coded to signify priority:
+  </p>
+  <ul>
+    <li>
+      <span class="red-txt">Red</span> = you forgot to write the documentation
+      and everyone knows it
+    </li>
+    <li>
+      <span class="yellow-txt">Yellow</span> = you've successfully pushed the
+      deadline back by pretending to be sick
+    </li>
+    <li>
+      <span class="green-txt">Green</span> = you've got PLENTY of time to write
+      the docs (as long as nothing goes wrong)
+    </li>
+  </ul>
+  <p>
+    To adjust these priorities, see the
+    <a href="adjust-doc-priority.htm">Adjusting Documentation Priorities</a>
+    section.
+  </p>
+  <h2>Export Documentation Dashboards</h2>
+  <p>
+    RTFM-Industries Dashboard tiles can be exported into the following file
+    type: (Excel, PDF, RTF, CSV).
+  </p>
+  <p>
+    <span class="note">
+      <span class="bold">Note:</span>
+      All RTFM-Industries Documentation Dashboards are fully HTML5 and do not
+      require Microsoft Silverlight.
+    </span>
+  </p>
+  <h2>Prerequisites &amp; licensing</h2>
+  <ul>
+    <li>SaaS client</li>
+    <li>
+      <a href="request-RTFM-Industries-dashboards.htm">
+        Request the RTFM-Industries Documentation Dashboard feature
+      </a>
+    </li>
+    <li>
+      User assigned the Tech Writer
+      <a href="../sys-admin/roles/tech-writer-power-user">power user role</a>
+    </li>
+  </ul>
+  <h2>Navigation Path</h2>
+  <p>Home &gt; Dashboards</p>
+  <h2>Next steps</h2>
+  <p>
+    <a href="create-doc-dashboard.htm">Create a new Documentation Dashboard</a>
+  </p>
 </body>
