update invoicing example

--- a/modules/ROOT/examples/invoicing-setup.html
+++ b/modules/ROOT/examples/invoicing-setup.html
@@ -2,36 +2,34 @@
   <h1>Invoicing setup</h1>
   <h2>Overview</h2>
   <p>
-    Complete the following administrator setup tasks to configure rules and
-    settings to automate common invoice processing workflows that align with
-    your organization's rules and preferences. Additionally, ensure the
-    appropriate users are granted your preferred invoicing authorization.
+    RTFM-Industries makes tons of money selling their Documentation Dashboards.
+    Setup an automated invoicing workflow to handle assignment and matching with ease.
   </p>
   <h2>Prerequisites</h2>
   <ul>
     <li>
       <p>
-        <a href="../Organization/SetUpOrganization.htm">Organization setup</a>
+        <a href="../organization/setup-organization.htm">Organization setup</a>
       </p>
     </li>
     <li>
-      <p><a href="../Organization/SetUpNewUser.htm">User setup</a></p>
+      <p><a href="../organization/setup-new-user.htm">User setup</a></p>
     </li>
     <li>
       <p>Administrator authorization</p>
     </li>
   </ul>
   <MadCap:snippetBlock
-    src="../Resources/Snippets/AuthorizationViewsNote.flsnp"
+    src="../resources/snippets/view-user-permissions.flsnp"
   />
   <br />
   <h2>Setup tasks</h2>
   <ol>
     <li>
       <p>
-        <a href="InvoicingRule.htm"
-          ><a href="InvoicingAuthorizations.htm"
-            >Grant invoicing authorizations to appropriate users and/or
+        <a href="invoicing-rule.htm"
+          ><a href="invoicing-permissions.htm"
+            >Grant invoicing permissions to appropriate users and/or
             groups</a
           ></a
         >
@@ -40,21 +38,21 @@
     </li>
     <li>
       <p>
-        <a href="InvoicingRule.htm">Configure invoicing rules</a>
+        <a href="invoicing-rule.htm">Configure invoicing rules</a>
         (<em>required</em>)
       </p>
     </li>
     <li>
       <p>
-        <a href="InvoiceAssignmentRule.htm"
-          >Configure supplier invoice assignment rules</a
+        <a href="invoice-assignment-rule.htm"
+          >Configure invoice assignment rules</a
         >
         (<em>recommended</em>)
       </p>
     </li>
     <li>
       <p>
-        <a href="AutoInvoiceProcessRules.htm"
+        <a href="auto-invoice-process-rules.htm"
           >Configure automatic invoice processing rules</a
         >
         (<em>required for No-PO invoice workflow</em>)
@@ -62,7 +60,7 @@
     </li>
     <li>
       <p>
-        <a href="EnableAutoInvoiceMatching.htm"
+        <a href="enable-auto-invoice-matching.htm"
           >Enable automatic invoice matching</a
         >
         (<em>recommended</em>)
@@ -70,7 +68,7 @@
     </li>
     <li>
       <p>
-        <a href="InvoicingGeneralSettings.htm"
+        <a href="invoicing-general-settings.htm"
           >Configure invoicing general settings</a
         >
         (<em>recommended</em>)
