update sample source blocks

--- a/modules/ROOT/examples/invoicing-setup.html
+++ b/modules/ROOT/examples/invoicing-setup.html
@@ -1,10 +1,12 @@
 <body>
   <h1>Invoicing setup</h1>
+
   <h2>Overview</h2>
-  <p>
+  <summary>
     RTFM-Industries makes tons of money selling their Documentation Dashboards.
     Setup an automated invoicing workflow to handle assignment and matching with ease.
-  </p>
+  </summary>
+
   <h2>Prerequisites</h2>
   <ul>
     <li>
@@ -16,23 +18,20 @@
       <p><a href="../organization/setup-new-user.htm">User setup</a></p>
     </li>
     <li>
-      <p>Administrator authorization</p>
+      <p>Administrator permissions</p>
     </li>
   </ul>
   <MadCap:snippetBlock
     src="../resources/snippets/view-user-permissions.flsnp"
   />
-  <br />
+
   <h2>Setup tasks</h2>
   <ol>
     <li>
       <p>
-        <a href="invoicing-rule.htm"
-          ><a href="invoicing-permissions.htm"
-            >Grant invoicing permissions to appropriate users and/or
-            groups</a
-          ></a
-        >
+         <a href="invoicing-permissions.htm"
+            >Grant invoicing permissions to appropriate users or
+            groups</a>
         (<em>required</em>)
       </p>
     </li>
