fix heading capitalization

--- a/modules/ROOT/examples/documentation-dashboards-overview.html
+++ b/modules/ROOT/examples/documentation-dashboards-overview.html
@@ -65,7 +65,7 @@
       <a href="../sys-admin/roles/tech-writer-power-user">power user role</a>
     </li>
   </ul>
-  <h2>Navigation Path</h2>
+  <h2>Navigation path</h2>
   <p>Home &gt; Dashboards</p>
   <h2>Next steps</h2>
   <p>
