update a href in xhtml sample

--- a/modules/ROOT/examples/match-invoice.html
+++ b/modules/ROOT/examples/match-invoice.html
@@ -6,11 +6,10 @@
   <summary>
     Automatically check for discrepancies between billed and received goods by
     matching an invoice. You can perform a <a href="#two-way-match">
-    two-way match</a>) with an invoice and a PO or a <a href="three-way-match"
-    if you also have a receipt.
-
-    Once an invoice is matched, its status updates to "Matched" and a linked
-    invoice is created in <b>RTFM-Industries &gt; Invoices</b>.
+    two-way match</a>) with an invoice and a PO or a <a href="three-way-match">
+    three-way match</a>if you also have a receipt. Once an invoice is matched, 
+    its status updates to "Matched" and a linked invoice is created in 
+    <b>RTFM-Industries &gt; Invoices</b>.
   </summary>
   <p>
     If discrepancies are found within your
