fix: update map function to dict in alert shortcode

--- a/modules/ROOT/examples/hugo/alert-shortcode.html
+++ b/modules/ROOT/examples/hugo/alert-shortcode.html
@@ -1,7 +1,7 @@
 {{ $type := .Get "type" | default "note" }}
 {{ $content := .Inner | markdownify }}
 
-{{ $titleMap := map
+{{ $titleMap := dict
   "info" "Note:"
   "success" "Success:"
   "warning" "Warning:"
