fix: swap span to div

--- a/modules/ROOT/examples/documentation-dashboards-overview.html
+++ b/modules/ROOT/examples/documentation-dashboards-overview.html
@@ -46,11 +46,11 @@
     type: (Excel, PDF, RTF, CSV).
   </p>
   <p>
-    <span class="note">
+    <div class="note">
       <span class="bold">Note:</span>
       All RTFM-Industries Documentation Dashboards are fully HTML5 and do not
       require Microsoft Silverlight.
-    </span>
+    </div>
   </p>
   <h2>Prerequisites &amp; licensing</h2>
   <ul>
