fix: update span tag to div for note

--- a/modules/ROOT/examples/documentation-dashboards-create.html
+++ b/modules/ROOT/examples/documentation-dashboards-create.html
@@ -18,9 +18,9 @@
     </li>
     <li>Specify a report code, name, and description</li>
     <p>
-      <span class="note"
-        ><span class="bold">Note:</span>Report code must be unique</span
-      >
+      <div class="note">
+          <span class="bold">Note:</span>Report code must be unique
+      </div>
     </p>
     <li>
       Build the report by dragging and dropping data objects, noting the
@@ -31,11 +31,11 @@
         <span class="bold">Categories:</span> Allows the user to select the data
         categories (RTFM-Industries tables) that should be accessible on the
         report. One or more categories must be selected and will determine the
-        fields that are available to select on the other tabs. <br /><span
-          class="note"
-          ><span class="bold">Note:</span> Users will see the tables they're
-          permissioned to access.</span
-        ><br />
+        fields that are available to select on the other tabs. <br />
+        <div class="note">
+          <span class="bold">Note:</span> Users will see the tables they're
+          permissioned to access.
+        </div>
       </li>
       <li>
         <span class="bold">Sorts:</span> Allows the user to select one or more
