fix: adjust spacing from prettier

--- a/modules/ROOT/examples/documentation-dashboards-create.html
+++ b/modules/ROOT/examples/documentation-dashboards-create.html
@@ -31,7 +31,7 @@
         <span class="bold">Categories:</span> Allows the user to select the data
         categories (RTFM-Industries tables) that should be accessible on the
         report. One or more categories must be selected and will determine the
-        fields that are available to select on the other tabs. <br />
+        fields that are available to select on the other tabs.<br />
         <div class="note">
           <span class="bold">Note:</span> Users will see the tables they're
           permissioned to access.
@@ -64,8 +64,6 @@
   </ol>
   <h2>Next steps</h2>
   <p>
-    <a href="reports-promote-global.htm "
-      >Promote a Documentation Dashboard to Global</a
-    >
+    <a href="reports-promote-global.htm">Promote a Documentation Dashboard to Global</a>
   </p>
 </body>
