fix: adjust spacing from auto-format

--- a/modules/ROOT/examples/invoicing-setup.html
+++ b/modules/ROOT/examples/invoicing-setup.html
@@ -1,12 +1,10 @@
 <body>
   <h1>Invoicing setup</h1>
-
   <h2>Overview</h2>
   <summary>
     RTFM-Industries makes tons of money selling their Documentation Dashboards.
     Setup an automated invoicing workflow to handle assignment and matching with ease.
   </summary>
-
   <h2>Prerequisites</h2>
   <ul>
     <li>
@@ -24,52 +22,48 @@
   <MadCap:snippetBlock
     src="../resources/snippets/view-user-permissions.flsnp"
   />
-
   <h2>Setup tasks</h2>
   <ol>
     <li>
       <p>
-         <a href="invoicing-permissions.htm"
-            >Grant invoicing permissions to appropriate users or
-            groups</a>
+         <a href="invoicing-permissions.htm">
+            Grant invoicing permissions to appropriate users
+            or groups</a>
         (<em>required</em>)
       </p>
     </li>
     <li>
       <p>
-        <a href="invoicing-rule.htm">Configure invoicing rules</a>
+        <a href="invoicing-rule.htm">
+          Configure invoicing rules</a>
         (<em>required</em>)
       </p>
     </li>
     <li>
       <p>
-        <a href="invoice-assignment-rule.htm"
-          >Configure invoice assignment rules</a
-        >
+        <a href="invoice-assignment-rule.htm">
+          Configure invoice assignment rules</a>
         (<em>recommended</em>)
       </p>
     </li>
     <li>
       <p>
-        <a href="auto-invoice-process-rules.htm"
-          >Configure automatic invoice processing rules</a
-        >
+        <a href="auto-invoice-process-rules.htm">
+          Configure automatic invoice processing rules</a>
         (<em>required for No-PO invoice workflow</em>)
       </p>
     </li>
     <li>
       <p>
-        <a href="enable-auto-invoice-matching.htm"
-          >Enable automatic invoice matching</a
-        >
+        <a href="enable-auto-invoice-matching.htm">
+          Enable automatic invoice matching</a>
         (<em>recommended</em>)
       </p>
     </li>
     <li>
       <p>
-        <a href="invoicing-general-settings.htm"
-          >Configure invoicing general settings</a
-        >
+        <a href="invoicing-general-settings.htm">
+          Configure invoicing general settings</a>
         (<em>recommended</em>)
       </p>
     </li>
