fix: update nested list html

--- a/modules/ROOT/examples/documentation-dashboards-create.html
+++ b/modules/ROOT/examples/documentation-dashboards-create.html
@@ -14,9 +14,9 @@
     <li>Click <span class="bold">Add Report</span>.</li>
     <li>
       From the Report Type dropdown, select a topic type and enable the chekbox
-      next to each documentation file you want to evaluate:
+      next to each documentation file you want to evaluate.
     </li>
-    <li>Specify a report code, name, and description</li>
+    <li>Specify a report code, name, and description.</li>
     <p>
       <div class="note">
           <span class="bold">Note:</span>Report code must be unique
@@ -25,7 +25,6 @@
     <li>
       Build the report by dragging and dropping data objects, noting the
       following about Categories, Sorts, Filters, and Layout tabs:
-    </li>
     <ol>
       <li>
         <span class="bold">Categories:</span> Allows the user to select the data
@@ -50,6 +49,7 @@
         the data fields that should display on the report
       </li>
     </ol>
+    </li>
     <li>
       To subscribe others to this Documentation Dashboard, enter their email
       address in the <span class="bold">Subscriber</span> field.
