reorg html writing samples

--- a/modules/ROOT/examples/documentation-dashboards-overview.html
+++ b/modules/ROOT/examples/documentation-dashboards-overview.html
@@ -1,12 +1,12 @@
 <body>
   <h1>RTFM-Industries Documentation Dashboards</h1>
   <p>
-    RTFM-Industries Documentation Dashboards provides technical writers with
-    visualized data to track documentation requests. Each dashboard tracks the
-    following metrics:
+    RTFM-Industries Documentation Dashboards provide technical writers with visualized data to track documentation requests. 
+
+Each dashboard tracks the following metrics:
   </p>
   <ul>
-    <li>Reuests for new feature documentation</li>
+    <li>Requests for new feature documentation</li>
     <li>Request for documentation bug fixes</li>
     <li>Percentage of documentation completed per project</li>
   </ul>
@@ -18,38 +18,30 @@
     <figcaption>RTFM-Industries Documentation Dashboards</figcaption>
   </figure>
   <p>
-    Within each dashboard, a tech writer can learn more about each data point by
-    clicking on it. Requests are color-coded to signify priority:
+    Within each dashboard, a tech writer can learn more about each data point by clicking on it. Requests are color-coded to signify priority:
   </p>
   <ul>
     <li>
-      <span class="red-txt">Red</span> = you forgot to write the documentation
-      and everyone knows it
+      <span class="red-txt">Red</span> = you forgot to write the documentation and everyone knows it
     </li>
     <li>
-      <span class="yellow-txt">Yellow</span> = you've successfully pushed the
-      deadline back by pretending to be sick
+      <span class="yellow-txt">Yellow</span> = you've successfully pushed the deadline back by pretending to be sick
     </li>
     <li>
-      <span class="green-txt">Green</span> = you've got PLENTY of time to write
-      the docs (as long as nothing goes wrong)
+      <span class="green-txt">Green</span> = you've got PLENTY of time to write the docs (as long as nothing goes wrong)
     </li>
   </ul>
   <p>
-    To adjust these priorities, see the
-    <a href="adjust-doc-priority.htm">Adjusting Documentation Priorities</a>
-    section.
+    To adjust these priorities, see the <a href="adjust-doc-priority.htm">Adjusting Documentation Priorities</a> section.
   </p>
   <h2>Export Documentation Dashboards</h2>
   <p>
-    RTFM-Industries Dashboard tiles can be exported into the following file
-    type: (Excel, PDF, RTF, CSV).
+    RTFM-Industries Dashboard tiles can be exported into the following file type: (Excel, PDF, RTF, CSV).
   </p>
   <p>
     <div class="note">
       <span class="bold">Note:</span>
-      All RTFM-Industries Documentation Dashboards are fully HTML5 and do not
-      require Microsoft Silverlight.
+      All RTFM-Industries Documentation Dashboards are fully HTML5 and do not require Microsoft Silverlight.
     </div>
   </p>
   <h2>Prerequisites &amp; licensing</h2>
