--- a/modules/ROOT/examples/invoicing-setup.html
+++ b/modules/ROOT/examples/invoicing-setup.html
@@ -2,8 +2,7 @@
   <h1>Invoicing setup</h1>
   <h2>Overview</h2>
   <summary>
-    RTFM-Industries makes tons of money selling their Documentation Dashboards.
-    Setup an automated invoicing workflow to handle assignment and matching with ease.
+    RTFM-Industries automates invoice processing, so you can assign and match invoices with ease. Complete the following setup tasks to configure the workflow.
   </summary>
   <h2>Prerequisites</h2>
   <ul>
