--- a/modules/ROOT/examples/match-invoice-bak.html
+++ b/modules/ROOT/examples/match-invoice-bak.html
@@ -7,7 +7,7 @@
     two-way match</a>) with an invoice and a PO or a <a href="three-way-match">
     three-way match</a>if you also have a receipt. Once an invoice is matched, 
     its status updates to "Matched" and a linked invoice is created in 
-    <span class="bold">RTFM-Industries &gt; Invoices</span>.
+    <p><span class="bold">RTFM-Industries &gt; Invoices</span></p>.
   </p>
   <p>
     If discrepancies are found within your
@@ -17,7 +17,7 @@
     discrepancies exceed your configured tolerance limits, you are
     prompted to resolve them manually.
   </p>
-  <h3><span class="bold">Additional processing options</span></h3>
+  <p><span class="bold">Additional processing options</span></p>
   <p>
     To request information or record an invoice exception, see the
     <a href="#Addition">Additional processing options</a> section.
@@ -42,14 +42,17 @@
   <h2>Location</h2>
   <p>
     You can match an invoice in two locations depending on the type
-    of match you're doing.
+    of match you're doing:
   </p>
   <h3>Match to a PO (two-way match)</h3>
-  <p><span class="bold">Procurement &gt; POs</span></p>
+  <ul>
+    <li>
+      <p><span class="bold">Procurement &gt; POs</span></p>
+    </li>
+  </ul>
 
   <h3>Match to a receipt (three-way match)</h3>
   <p><span class="bold">Procurement &gt; Receipts</span></p>
-
   <h2><a name="two-way-match"></a>Match an invoice to a PO</h2>
   <p>
     Create an invoice from a PO and check for discrepancies with a
