--- a/modules/ROOT/examples/documentation-dashboards-create.html
+++ b/modules/ROOT/examples/documentation-dashboards-create.html
@@ -6,7 +6,10 @@
     reference).
   </p>
   <h2>Prerequisites</h2>
-  <p><a href="doc-dashboards-prerequisites">Prerequisites</a></p>
+  <ul>
+    <li>Dashboard Designer role</li>
+    <li><a href="doc-dashboards-setup">Documentation Dashboards setup</a></li>
+  </ul>
   <h2>Navigation path</h2>
   <p>Home &gt; Dashboards &gt; Create New</p>
   <h2>Task</h2>
@@ -19,7 +22,7 @@
     <li>Specify a report code, name, and description.</li>
     <p>
       <div class="note">
-          <span class="bold">Note:</span>Report code must be unique
+          <span class="bold">Note:</span>Report code must be unique.
       </div>
     </p>
     <li>
@@ -54,13 +57,12 @@
       To subscribe others to this Documentation Dashboard, enter their email
       address in the <span class="bold">Subscriber</span> field.
     </li>
-    <li>Click <span class="bold">Save</span> when finished.</li>
-    <li>
+    <li>Click <span class="bold">Save</span> when finished.
       <p>
         <span class="bold">Result:</span> the Documentation Dashboard is added
         to the list in the bottom panel.
       </p>
-    </li>
+      </li>
   </ol>
   <h2>Next steps</h2>
   <p>
